@@ -1,3 +1,9 @@
+2005-02-20  Pat Thoyts  <patthoyts@users.sourceforge.net>
+
+	* rc4.tcl: Ensure all implementations available are tested. Added
+	* rc4.man: improved hypen handling. '--' is an optional end-of-options
+	* pkgIndex.tcl:	marker.
+
 2004-10-05  Andreas Kupries  <andreas_kupries@users.sourceforge.net>
 
 	*
